--- a/M2/Macaulay2/e/Makefile.files
+++ b/M2/Macaulay2/e/Makefile.files
@@ -9,6 +9,7 @@ INTERFACE2 = interrupted
 #  NCAlgebras/SuffixTree \
 
 INTERFACE = \
+	SparseMatrixZZp \
 	myalloc \
 	matrix-ncbasis \
 	M2FreeAlgebraQuotient \
