--- a/M2/Macaulay2/e/unit-tests/Makefile.files
+++ b/M2/Macaulay2/e/unit-tests/Makefile.files
@@ -6,6 +6,7 @@ SHARED_UNITTEST_CCFILES := \
 
 UNITTEST_CCFILES := \
     $(SHARED_UNITTEST_CCFILES) \
+    TestSparseMatrixZZp \
     NCGroebnerTest \
     PointArray \
     ARingZZTest \
