Created directory for sparse matrix stuff, and created separate file for PivotHelper code.

--- a/M2/Macaulay2/e/CMakeLists.txt
+++ b/M2/Macaulay2/e/CMakeLists.txt
@@ -153,7 +153,8 @@ set(CPPONLYFILES
 # these files all have .hpp and .cpp files
 # MES TODO: put these NCAlgebra files (and friends) into alpha order in list
 set(SRCLIST
-  SparseMatrixZZp
+  sparse-matrix/SparseMatrixZZp
+  sparse-matrix/PivotHelper
   myalloc
   matrix-ncbasis
   M2FreeAlgebraQuotient
