--- a/M2/Macaulay2/e/Makefile.files
+++ b/M2/Macaulay2/e/Makefile.files
@@ -9,7 +9,8 @@ INTERFACE2 = interrupted
 #  NCAlgebras/SuffixTree \
 
 INTERFACE = \
-	SparseMatrixZZp \
+	sparse-matrix/SparseMatrixZZp \
+	sparse-matrix/PivotHelper \
 	myalloc \
 	matrix-ncbasis \
 	M2FreeAlgebraQuotient \
