Factored graph generation into its own class.  Added another member to PivotHelper to vastly speed up building pivot graph.  Also made the PivotHelper and PivotGraph classes work with either an unordered_map or vector underneath with minor changes in the PivotHelper hpp file.

--- a/M2/Macaulay2/e/Makefile.files
+++ b/M2/Macaulay2/e/Makefile.files
@@ -11,6 +11,7 @@ INTERFACE2 = interrupted
 INTERFACE = \
 	sparse-matrix/SparseMatrixZZp \
 	sparse-matrix/PivotHelper \
+	sparse-matrix/PivotGraph \
 	myalloc \
 	matrix-ncbasis \
 	M2FreeAlgebraQuotient \
