Reorganized files a bit, and added SparseVector and DenseVector classes.

--- a/M2/Macaulay2/e/CMakeLists.txt
+++ b/M2/Macaulay2/e/CMakeLists.txt
@@ -102,6 +102,8 @@ set(HPPONLYFILES
   schreyer-resolution/res-memblock.hpp
   schreyer-resolution/res-monomial-types.hpp
   schreyer-resolution/res-schreyer-order.hpp
+  sparse-matrix/Iterators.hpp
+  sparse-matrix/MatrixOps.hpp
   )
 
 # these files have .cpp file, but NOT .hpp file
@@ -153,6 +155,7 @@ set(CPPONLYFILES
 # these files all have .hpp and .cpp files
 # MES TODO: put these NCAlgebra files (and friends) into alpha order in list
 set(SRCLIST
+  sparse-matrix/SparseVector
   sparse-matrix/SparseMatrixZZp
   sparse-matrix/PivotHelper
   sparse-matrix/PivotGraph
