Added MatrixOps.cpp, as well as changed make files.

--- a/M2/Macaulay2/e/CMakeLists.txt
+++ b/M2/Macaulay2/e/CMakeLists.txt
@@ -103,7 +103,6 @@ set(HPPONLYFILES
   schreyer-resolution/res-monomial-types.hpp
   schreyer-resolution/res-schreyer-order.hpp
   sparse-matrix/Iterators.hpp
-  sparse-matrix/MatrixOps.hpp
   )
 
 # these files have .cpp file, but NOT .hpp file
@@ -155,6 +154,7 @@ set(CPPONLYFILES
 # these files all have .hpp and .cpp files
 # MES TODO: put these NCAlgebra files (and friends) into alpha order in list
 set(SRCLIST
+  sparse-matrix/MatrixOps
   sparse-matrix/Vectors
   sparse-matrix/SparseMatrixZZp
   sparse-matrix/PivotHelper
