--- a/M2/Macaulay2/e/unit-tests/Makefile.files
+++ b/M2/Macaulay2/e/unit-tests/Makefile.files
@@ -6,7 +6,7 @@ SHARED_UNITTEST_CCFILES := \
 
 UNITTEST_CCFILES := \
     $(SHARED_UNITTEST_CCFILES) \
-    TestSparseMatrixZZp \
+    LinboxTest \
     NCGroebnerTest \
     PointArray \
     ARingZZTest \
@@ -24,7 +24,7 @@ UNITTEST_CCFILES := \
     RingTowerTest \
     DMatZZpTest \
     ResTest \
-    SubsetTest  
+    SubsetTest 
 
 #    RingRRRTest \
 #    RingCCCTest \
